# urfu_pe_final_proj

./: .gitignore  README.md  docker-compose.yaml
shorturl_app/: Dockerfile  pyproject.toml
shorturl_app/shorturl_app/: database.py  main.py
todo_app/: Dockerfile  pyproject.toml
todo_app/todo_app/: database.py  main.py
